<resources>
    <string name="app_name">login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio de Sesión</string>
    <string name="menu_gallery">Registro</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="nameEt">Nombre</string>
    <string name="apPatEt">Apellido Paterno</string>
    <string name="apMatEt">Apellido Materno</string>
    <string name="emailEt">Correo</string>
    <string name="passEt">Contraseña</string>
    <string name="validateEt">Repite tu contaseña</string>
    <string name="btnRegistrar">REGISTRAR</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
</resources>